--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language : java
 sudo : false
-script : "maven -f OrnekMavenProje/pom.xml clean install"
+script : "mvn -f OrnekMavenProje/pom.xml clean install"
 jdk:
    - oraclejdk8
