--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ sudo : false
 script : "mvn -f OrnekMavenProje/pom.xml clean install"
 jdk:
    - oraclejdk8
+   - oraclejdk9
+   - oraclejdk11   
+   - openjdk8
