--- a/OrnekMavenProje/pom.xml
+++ b/OrnekMavenProje/pom.xml
@@ -6,6 +6,12 @@
 	<artifactId>OrnekMavenProje</artifactId>
 	<version>0.0.3-SNAPSHOT</version>
 
+    <properties>
+        <java.version>1.8</java.version>
+	    <maven.compiler.source>1.8</maven.compiler.source>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
