--- a/OrnekMavenProje/pom.xml
+++ b/OrnekMavenProje/pom.xml
@@ -6,10 +6,10 @@
 	<artifactId>OrnekMavenProje</artifactId>
 	<version>0.0.3-SNAPSHOT</version>
 
-    <properties>
-        <java.version>1.8</java.version>
-	    <maven.compiler.source>1.8</maven.compiler.source>
-	    <maven.compiler.target>1.8</maven.compiler.target>
+	<properties>
+		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -23,5 +23,26 @@
 
 
 	</dependencies>
+
+	<build>
+		<plugins>
+		
+		    <!-- cobertura:check -->
+		    <!-- cobertura:cobertura -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<check />
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
