--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language : java
-script : "mvn -f OrnekMavenProje/pom.xml clean install"
+script : "mvn -f OrnekMavenProje/pom.xml clean install cobertura:cobertura"
 jdk: 
    - openjdk8
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
