--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language : java
-script : "mvn -f OrnekMavenProje/pom.xml clean install cobertura:cobertura"
+script : "mvn -f pom.xml clean install cobertura:cobertura"
 jdk: 
    - openjdk8
 after_success:
